feat(saml): saml 2.0 implementation (#1928) Signed-off-by: ThibaultHerard <thibaultherard10@gmail.com>
