# internal/httpclient/api/openapi.yaml
@@ -1179,6 +1179,51 @@ paths:
       summary: Create a Logout URL for Browsers
       tags:
       - v0alpha2
+  /self-service/methods/saml/auth:
+    get:
+      description: |-
+        This endpoint initiates a registration flow for API clients such as mobile devices, smart TVs, and so on.
+
+        If a valid provided session cookie or session token is provided, a 400 Bad Request error
+        will be returned unless the URL query parameter `?refresh=true` is set.
+
+        To fetch an existing registration flow call `/self-service/registration/flows?flow=<flow_id>`.
+
+        You MUST NOT use this endpoint in client-side (Single Page Apps, ReactJS, AngularJS) nor server-side (Java Server
+        Pages, NodeJS, PHP, Golang, ...) browser applications. Using this endpoint in these applications will make
+        you vulnerable to a variety of CSRF attacks.
+
+        In the case of an error, the `error.id` of the JSON response body can be one of:
+
+        `session_already_available`: The user is already signed in.
+        `security_csrf_violation`: Unable to fetch the flow because a CSRF violation occurred.
+
+        This endpoint MUST ONLY be used in scenarios such as native mobile apps (React Native, Objective C, Swift, Java, ...).
+
+        More information can be found at [Ory Kratos User Login and User Registration Documentation](https://www.ory.sh/docs/next/kratos/self-service/flows/user-login-user-registration).
+      operationId: initializeSelfServiceSamlFlowForBrowsers
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/selfServiceRegistrationFlow'
+          description: selfServiceRegistrationFlow
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/jsonError'
+          description: jsonError
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/jsonError'
+          description: jsonError
+      summary: Initialize Registration Flow for APIs, Services, Apps, ...
+      tags:
+      - v0alpha2
   /self-service/recovery:
     post:
       description: |-
@@ -3821,6 +3866,24 @@ components:
       - request_url
       - type
       - ui
+      type: object
+    selfServiceSamlUrl:
+      properties:
+        saml_acs_url:
+          description: |-
+            SamlAcsURL is a post endpoint to handle SAML Response
+
+            format: uri
+          type: string
+        saml_metadata_url:
+          description: |-
+            SamlMetadataURL is a get endpoint to get the metadata
+
+            format: uri
+          type: string
+      required:
+      - saml_acs_url
+      - saml_metadata_url
       type: object
     selfServiceSettingsFlow:
       description: |-
