# internal/httpclient/model_self_service_saml_url.go
@@ -1,0 +1,134 @@
+/*
+ * Ory Kratos API
+ *
+ * Documentation for all public and administrative Ory Kratos APIs. Public and administrative APIs are exposed on different ports. Public APIs can face the public internet without any protection while administrative APIs should never be exposed without prior authorization. To protect the administative API port you should use something like Nginx, Ory Oathkeeper, or any other technology capable of authorizing incoming requests.
+ *
+ * API version: 1.0.0
+ * Contact: hi@ory.sh
+ */
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package client
+
+import (
+	"encoding/json"
+)
+
+// SelfServiceSamlUrl struct for SelfServiceSamlUrl
+type SelfServiceSamlUrl struct {
+	// SamlAcsURL is a post endpoint to handle SAML Response  format: uri
+	SamlAcsUrl string `json:"saml_acs_url"`
+	// SamlMetadataURL is a get endpoint to get the metadata  format: uri
+	SamlMetadataUrl string `json:"saml_metadata_url"`
+}
+
+// NewSelfServiceSamlUrl instantiates a new SelfServiceSamlUrl object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewSelfServiceSamlUrl(samlAcsUrl string, samlMetadataUrl string) *SelfServiceSamlUrl {
+	this := SelfServiceSamlUrl{}
+	this.SamlAcsUrl = samlAcsUrl
+	this.SamlMetadataUrl = samlMetadataUrl
+	return &this
+}
+
+// NewSelfServiceSamlUrlWithDefaults instantiates a new SelfServiceSamlUrl object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewSelfServiceSamlUrlWithDefaults() *SelfServiceSamlUrl {
+	this := SelfServiceSamlUrl{}
+	return &this
+}
+
+// GetSamlAcsUrl returns the SamlAcsUrl field value
+func (o *SelfServiceSamlUrl) GetSamlAcsUrl() string {
+	if o == nil {
+		return ""
+	}
+
+	return o.SamlAcsUrl
+}
+
+// GetSamlAcsUrlOk returns a tuple with the SamlAcsUrl field value
+// and a boolean to check if the value has been set.
+func (o *SelfServiceSamlUrl) GetSamlAcsUrlOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.SamlAcsUrl, true
+}
+
+// SetSamlAcsUrl sets field value
+func (o *SelfServiceSamlUrl) SetSamlAcsUrl(v string) {
+	o.SamlAcsUrl = v
+}
+
+// GetSamlMetadataUrl returns the SamlMetadataUrl field value
+func (o *SelfServiceSamlUrl) GetSamlMetadataUrl() string {
+	if o == nil {
+		return ""
+	}
+
+	return o.SamlMetadataUrl
+}
+
+// GetSamlMetadataUrlOk returns a tuple with the SamlMetadataUrl field value
+// and a boolean to check if the value has been set.
+func (o *SelfServiceSamlUrl) GetSamlMetadataUrlOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.SamlMetadataUrl, true
+}
+
+// SetSamlMetadataUrl sets field value
+func (o *SelfServiceSamlUrl) SetSamlMetadataUrl(v string) {
+	o.SamlMetadataUrl = v
+}
+
+func (o SelfServiceSamlUrl) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	
+	toSerialize["saml_acs_url"] = o.SamlAcsUrl
+	toSerialize["saml_metadata_url"] = o.SamlMetadataUrl
+	
+	return json.Marshal(toSerialize)
+}
+
+type NullableSelfServiceSamlUrl struct {
+	value *SelfServiceSamlUrl
+	isSet bool
+}
+
+func (v NullableSelfServiceSamlUrl) Get() *SelfServiceSamlUrl {
+	return v.value
+}
+
+func (v *NullableSelfServiceSamlUrl) Set(val *SelfServiceSamlUrl) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableSelfServiceSamlUrl) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableSelfServiceSamlUrl) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableSelfServiceSamlUrl(val *SelfServiceSamlUrl) *NullableSelfServiceSamlUrl {
+	return &NullableSelfServiceSamlUrl{value: val, isSet: true}
+}
+
+func (v NullableSelfServiceSamlUrl) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableSelfServiceSamlUrl) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
